--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <input type="file" id="image-input">
-      <div class="image-container"> Double-click on this.
+      <div class="image-container"><span id="upload-message">Double-click here to add an image.</span>
         <img id="image">
       </div>
       <div class="input-container">
@@ -19,9 +19,9 @@
         </select>
         <input type="number" id="minutes" value="25" min="0" max="99">:<input type="number" id="seconds" value="00" min="0" max="60">
         &nbsp;
-        <button id="start"><i class="fas fa-play"></i></button>
-        <button id="pause"><i class="fas fa-pause"></i></button>
-        <button id="stop"><i class="fas fa-stop"></i></button>
+        <button id="start"><i class="fas fa-play fa-lg"></i></button>
+        <button id="pause"><i class="fas fa-pause fa-lg"></i></button>
+        <button id="stop"><i class="fas fa-stop fa-lg"></i></button><div id="burst"></div>
       </div>
       <!--div class="button-container">
       </div-->
