폰트사이즈 등 vh로 변경

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="number" id="minutes" value="25" min="0" max="99">:<input type="number" id="seconds" value="00" min="0" max="60">
         <button id="start"><i class="fas fa-play fa-lg"></i></button>
         <button id="pause"><i class="fas fa-pause fa-lg"></i></button>
-        <button id="stop"><i class="fas fa-stop fa-lg"></i></button><div id="burst"></div>
+        <button id="stop"><i class="fas fa-stop fa-lg"></i></button>
       </div>
       <!--div class="button-container">
       </div-->
