full-screen 추가해서 container가 가운데 자리하도록 수정

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body onload="loadTimerSettings()">
+    <div class="full-screen">
     <div class="container">
       <input type="file" id="image-input">
       <div class="image-container"><span id="upload-message">Double-click here to add an image.</span>
@@ -31,6 +32,7 @@
           <span class="slider"></span>
         </label>
       </div>
+    </div>
     </div>
     <div class="modal">
       <div class="modal-content">
