분,초 사이에 있는 ':'에 스타일 지정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <option value="top-down">Top-Down</option>
           <option value="bottom-up">Bottom-Up</option>
         </select>
-        <input type="number" id="minutes" value="25" min="0" max="99">:<input type="number" id="seconds" value="00" min="0" max="60">
+        <input type="number" id="minutes" value="25" min="0" max="99"><label>:</label><input type="number" id="seconds" value="00" min="0" max="60">
         <button id="start"><i class="fas fa-play fa-lg"></i></button>
         <button id="pause"><i class="fas fa-pause fa-lg"></i></button>
         <button id="stop"><i class="fas fa-stop fa-lg"></i></button>
