알림 레이블 추가

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       </div>
       <!--div class="button-container">
       </div-->
+      <div class="lable-container">
+      <div class="timer-label">
+        Motivational message on timer completion
+      </div></div>
       <div class="input-container">
         <input type="text" id="message" value="Great job! You completed the task!">
         <label class="switch">
