Zoom-in 추가, 타이머 종료시 스마트폰 깜빡임 추가

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class="input-container">
         <!--label for="image-effect">Image Effect: </label-->
         <select name="image-effect" id="image-effect">
-          <option value="gradual">Gradual</option>
+          <option value="fade-in">Fade-in</option>
+          <option value="zoom-in">Zoom-in</option>
           <option value="top-down">Top-Down</option>
           <option value="bottom-up">Bottom-Up</option>
         </select>
