타이머 시작하면 동기부여 메시지 입력칸 가림

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       </div></div>
       <div class="input-container">
         <input type="text" id="message" value="Great job! You completed the task! 🙂">
+        <div id="input-cover">&#4502;</div>
         <label class="switch">
           <input type="checkbox">
           <span class="slider"></span>
@@ -49,8 +50,8 @@
         <!--button class="modal-ok">OK</button-->
       </div>
     </div>
-    <nav class="nav">&nbsp;</nav>
-    <div class="input-container"></div>
+    <!--nav class="nav">&nbsp;</nav>
+    <div class="input-container"></div-->
     <script src="https://kit.fontawesome.com/2ece379672.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </body>
