타이머 종료시 모스부호 진동, 싱잉볼 추가

--- a/index.html
+++ b/index.html
@@ -41,10 +41,24 @@
         <input type="text" id="message" value="Great job! You completed the task! 🙂">
         <div id="input-cover"></div>
         <label class="switch">
-          <input type="checkbox">
+          <input type="checkbox" id="message-toggle">
           <span class="slider"></span>
         </label>
       </div>
+      <!--div class="input-container">
+        <div id="input-cover"></div>
+        <div class="notification-label">Notification</div>
+        <label class="switch">
+          <input type="checkbox" id="notification-toggle">
+          <span class="slider"></span>
+        </label>
+        <div class="notification-label">Haptic Vibration</div>
+        <div id="input-cover"></div>
+        <label class="switch">
+          <input type="checkbox" id="vibration-toggle">
+          <span class="slider"></span>
+        </label>
+      </div-->
     </div>
     </div>
     <div class="modal">
