--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <!--nav class="nav">&nbsp;</nav>
     <div class="input-container"></div-->
     <script src="https://kit.fontawesome.com/2ece379672.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
