소리, 진동 셋팅

--- a/index.html
+++ b/index.html
@@ -45,20 +45,17 @@
           <span class="slider"></span>
         </label>
       </div>
-      <!--div class="input-container">
+      <div class="setting-container">
         <div id="input-cover"></div>
-        <div class="notification-label">Notification</div>
-        <label class="switch">
-          <input type="checkbox" id="notification-toggle">
-          <span class="slider"></span>
-        </label>
-        <div class="notification-label">Haptic Vibration</div>
-        <div id="input-cover"></div>
-        <label class="switch">
-          <input type="checkbox" id="vibration-toggle">
-          <span class="slider"></span>
-        </label>
-      </div-->
+        <div>
+          <input type="checkbox" id="sound-checkbox">
+          Enable Sound Notification
+        </div>
+        <div>
+          <input type="checkbox" id="vibration-checkbox">
+          Enable Vibration Notification
+        </div>
+      </div>
     </div>
     </div>
     <div class="modal">
