가로라인 추가, 시작 버튼 클릭시 스크롤 막음

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
           <span class="slider"></span>
         </label>
       </div>
+      <div class="line"></div>
       <div class="setting-container">
         <div id="input-cover"></div>
         <div>
           <input type="checkbox" id="sound-checkbox">
-          Enable Sound Notification
+          Enable Sound Notification (Click sound effect)
         </div>
         <div>
           <input type="checkbox" id="vibration-checkbox">
