폰트 사이즈 변경, 호오포노포노 문구 추가

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <div id="input-cover"></div>
         <div>
           <input type="checkbox" id="sound-checkbox">
-          Enable Sound Notification (Click sound effect)
+          Enable <b>Sound</b> Notification (Click sound effect)
         </div>
         <div>
           <input type="checkbox" id="vibration-checkbox">
-          Enable Vibration Notification
+          Enable <b>Vibration</b> Notification
         </div>
       </div>
     </div>
@@ -71,5 +71,6 @@
     <script src="https://kit.fontawesome.com/2ece379672.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="script.js"></script>
+    <!--Thank you, I love you-->
   </body>
 </html>
