image-container 안의 문장이 가운데 위치하게 하는 방법 수정 - .full-box 추가, align-self: center;

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
       <div class="remain-space"></div>
       <input type="file" id="image-input">
-      <div class="image-container"><span id="upload-message">Double-click here to add an image.</span>
+      <div class="image-container">
+        <div class="full-box">
+          <span id="upload-message">Double-click here to add an image.</span>
+        </div>
         <img id="image">
       </div>
       <div class="input-container">
